Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24533

"package import requires a version number" when using versionless QML import

XMLWordPrintable

    • 1b134a69090c7326554157494f89271a5c088ae2 (qt-creator/qt-creator/4.13)

      Import a module without a version is supported in Qt 6:

      import QtQuick
      

      However, Creator complains about it:

      [...]/ErrorPopup.qml:3: error: package import requires a version number
      

      This makes for a very noisy Issues pane for any project with more than a trivial amount of QML files.

      Personally I have ~2550 QML errors as a result of this, which makes it hard to see the legitimate errors.

        1. screenshot-1.png
          123 kB
          ROKE BEEDELL
        2. versionless-import.png
          90 kB
          Christian Fischerauer
        For Gerrit Dashboard: QTCREATORBUG-24533
        # Subject Branch Project Status CR V

            qtqmlteam Qt Qml Team User
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes