QmlJS: accept import without version

Since Qt 6 import without version are accepted and should import
the latest version.

Change-Id: Id98bd0f7664dd77b30b9c91ee153fccc4160fc6d
Fixes: QTCREATORBUG-24533
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>